--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Welcome to the Movie Database!</h1>
+		<h1><%= user.details.firstname %>, Welcome to the Movie API!</h1>
 		<p>Here you can browse and search for your favorite movies.</p>
 		
 		<form action="/logout" method="POST">
