--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,6 +23,12 @@
 			<button type="submit">Login</button>
 		</form>
 	</div>
+
+	<footer>
+		<p>Made by Daniel Faratro & Sam Tang</p>
+		<p><a href="https://github.com/tsangkafu/COMP4513-Assignment-2">View on GitHub</a></p>
+	</footer>
+
 	<script src="/movie-api.js"></script>
 	<script>
 		// get the error message element
