--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 .container {
-	width: 400px;
+	width: 600px;
 	margin: 50px auto;
 	background-color: #fff;
 	padding: 20px;
@@ -58,10 +58,63 @@ button[type="submit"] {
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 	cursor: pointer;
 	transition: background-color 0.3s;
+	width: 50%;
+	margin: 0 auto;
+	margin-bottom: 20px;
+    display: block;
 }
+
 
 button[type="submit"]:hover {
 	background-color: #2E8B57;
+}
+
+button[type="submit"], th {
+    font-size: 16px;
+}
+
+th, td {
+    text-align: center;
+    padding: 8px;
+    border-bottom: 1px solid #ddd;
+}
+
+th {
+    background-color: #4CAF50;
+    color: white;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+tr:hover {
+    background-color: #ddd;
+}
+
+td:first-child {
+    font-weight: bold;
+}
+
+footer {
+	margin-top: 50px;
+	background-color: #4CAF50;
+	color: #fff;
+	text-align: center;
+	padding: 10px;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+
+footer a {
+	color: #fff;
+	text-decoration: none;
+}
+
+footer a:hover {
+	text-decoration: underline;
 }
 
 .fade-out {
